fix: header spacing, position, fix selection highlight colors

--- a/frontend/theme/extras/colors.less
+++ b/frontend/theme/extras/colors.less
@@ -2,6 +2,7 @@ body {
   --bonnefanten-bg: #ffe79a;
   --bonnefanten-primary: #f9423a;
   --bonnefanten-primary-text: #575756;
+  --bonnefanten-primary-invert: #fff;
   --bonnefanten-text: #333;
 
   background: var(--bonnefanten-bg);
